<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="0dp"
    android:background="@android:color/transparent"
    android:clipToPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_zero"
        android:background="@android:color/transparent"
        android:clipToPadding="true">

        <!-- Top Background Image -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_bg_height">

        <ImageView
            android:id="@+id/loginbgimage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_bg_height"
            android:scaleType="centerCrop"
            android:src="@drawable/blibli_bg"
            android:contentDescription="@null" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80000000" /> <!-- 50% black overlay -->
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/bottomcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-24dp"
            android:layout_marginBottom="@dimen/padding_zero"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="@color/card_bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_large">

                <!-- Email Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emaillayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    app:boxStrokeWidth="0dp"
                    app:boxCornerRadiusTopStart="@dimen/corner_radius_small"
                    app:boxCornerRadiusTopEnd="@dimen/corner_radius_small"
                    app:boxCornerRadiusBottomStart="@dimen/corner_radius_small"
                    app:boxCornerRadiusBottomEnd="@dimen/corner_radius_small"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="@android:color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_medium"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:visibility="gone"
                    app:boxStrokeWidth="0dp"
                    android:layout_marginTop="@dimen/margin_top_medium"
                    app:boxCornerRadiusTopStart="@dimen/corner_radius_small"
                    app:boxCornerRadiusTopEnd="@dimen/corner_radius_small"
                    app:boxCornerRadiusBottomStart="@dimen/corner_radius_small"
                    app:boxCornerRadiusBottomEnd="@dimen/corner_radius_small"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="@android:color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_medium"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Login Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_large"
                    android:text="@string/login_text"
                    android:textSize="@dimen/text_size_button"
                    android:textColor="@color/white"
                    android:padding="@dimen/padding_medium"
                    app:cornerRadius="@dimen/button_corner_radius"
                    app:backgroundTint="@color/blue"
                    app:rippleColor="@color/blue" />

                <TextView
                    android:id="@+id/fastlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_top_medium"
                    android:text="@string/fast_login_text"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/text_size_medium" />

                <!-- Social Login -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_large"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btngoogle"
                        android:layout_width="@dimen/social_icon_size"
                        android:layout_height="@dimen/social_icon_size"
                        android:padding="@dimen/padding_zero"
                        android:src="@drawable/ic_google"
                        android:layout_marginEnd="@dimen/margin_end_large"
                        android:contentDescription="@null"/>

                    <ImageView
                        android:id="@+id/btnfacebook"
                        android:layout_width="@dimen/social_icon_size"
                        android:layout_height="@dimen/social_icon_size"
                        android:padding="@dimen/padding_small"
                        android:src="@drawable/ic_facebook"
                        android:layout_marginEnd="@dimen/margin_end_medium"
                        android:contentDescription="@null"/>

                    <ImageView
                        android:id="@+id/btnapple"
                        android:layout_width="@dimen/social_icon_size"
                        android:layout_height="@dimen/social_icon_size"
                        android:padding="@dimen/padding_small"
                        android:src="@drawable/ic_apple"
                        android:contentDescription="@null"/>
                </LinearLayout>

                <!-- Register Text -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_top_large"
                    android:layout_marginBottom="@dimen/margin_bottom_large">

                    <TextView
                        android:id="@+id/nocccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_account_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_text"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_medium" />
                </LinearLayout>

                <TextView
                    android:id="@+id/agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/agreement_height"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/margin_top_small"
                    android:text="@string/agreement_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:id="@+id/imgticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ticket"
                    android:layout_marginTop="@dimen/margin_top_medium"
                    android:layout_gravity="center"
                    android:contentDescription="@string/ticket_image_desc"
                    android:layout_marginBottom="@dimen/margin_bottom_xlarge"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
