<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- TOP BAR -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_12"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- SEARCH BOX -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_searchbox"
            android:background="@drawable/bg_search_box"
            android:paddingStart="@dimen/spacing_8"
            android:paddingEnd="@dimen/spacing_8"
            android:layout_marginEnd="@dimen/spacing_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iconCart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iconSearch"
                android:layout_width="@dimen/icon_18"
                android:layout_height="@dimen/icon_18"
                android:src="@drawable/ic_search"
                app:tint="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:textSize="@dimen/text_14"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:background="@android:color/transparent"
                android:paddingStart="@dimen/spacing_6"
                android:singleLine="true"
                app:layout_constraintStart_toEndOf="@id/iconSearch"
                app:layout_constraintEnd_toStartOf="@id/iconClear"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/iconClear"
                android:layout_width="@dimen/icon_26"
                android:layout_height="@dimen/icon_26"
                android:src="@drawable/ic_close"
                android:padding="@dimen/spacing_4"
                android:visibility="gone"
                app:tint="@color/color_icon_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- CART & HOME -->
        <ImageView
            android:id="@+id/iconCart"
            android:layout_width="@dimen/icon_24"
            android:layout_height="@dimen/icon_24"
            android:src="@drawable/ic_cart"
            android:layout_marginEnd="@dimen/spacing_16"
            app:layout_constraintEnd_toStartOf="@id/iconHome"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/iconHome"
            android:layout_width="@dimen/icon_24"
            android:layout_height="@dimen/icon_24"
            android:src="@drawable/ic_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ADDRESS ROW -->
    <LinearLayout
        android:id="@+id/addressRow"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_12"
        android:paddingEnd="@dimen/spacing_12"
        android:paddingTop="@dimen/spacing_6"
        android:paddingBottom="@dimen/spacing_6"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="@dimen/icon_16"
            android:layout_height="@dimen/icon_16"
            android:src="@drawable/ic_location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_add_address"
            android:textColor="@color/color_text_primary_blue"
            android:textSize="@dimen/text_14"
            android:layout_marginStart="@dimen/spacing_6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_shop_fun"
            android:textColor="@color/color_text_secondary_grey"
            android:textSize="@dimen/text_14"/>
    </LinearLayout>

    <!-- EMPTY STATE (container for layout_empty_state) -->
    <FrameLayout
        android:id="@+id/emptyStateView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/addressRow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- PRODUCT LIST -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_10"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressRow"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
